 . AtlasSpriteManager: works with capacity=1 (issue #305)
 . CocosNode: CocosNodeExtras merged into CocosNode (issue #292)
 . CocosNode: improved runAction/stopAction (issue #300)
 . CocosNode: possible memory leak when running actions (issue #298)
 . CocosNode: dont execute an already running action (issue #299)
 . CocosNode: children referring to deallocated parent (issue #297)
 . Demos: AtlasSprite with z-order (issue #275)
 . Demos: ParticleDemo uses touches to move the center of the emitter (issue #138)
 . Demos: organized tests folder (issue #280)
 . Demos: Atlas and Sprites uses TintBy and TintTo (issue #204)
 . Demos: Menu shows how to use padding / dynamic toggle items (part of issue #249, issue #224)
 . Director: Attach uses 'bounds' not 'frame' (issue #233)
 . Documentation: API doc documents free functions (issue #314)
 . Menu: an empty menu can be crated (issue #277)
 . Menu: supports padding (issue #249)
 . Menu: MenuToggleItem supports add/remove items in runtime (issue #224)
 . Particles: Use by default fire.pvr (issue #276)
 . Particles: resetSystem actually resets the system (issue #252)
 . Particles: texture is a property (issue #282)
 . Particles: colors and vertices in 1 VBO (issue #246)
 . Scheduler: improved timer performance (issue #309)
 . SoundSupport: supports vorbis codec (issue #321)
 . ccArray: a fast alternative to NSMutableArray (issue #304)
 . TextureAtlas: fixed colorarray memory leak (issue #272)
 . TextureAtlas: support for insert,remove,reorder (issue #275)
 . TextureAtlas: free indices correctly when out of memory (issue #293)
 . TextureAtlas: resizeCapacity returns BOOL instead of raise exception (issue #294)
 . TextureNode: texture is "retain" not "assign" (issue #230 and issue #274)
 . TileMapAtlas: supports fullpath (issue #220)
 . XCode project: added class model (issue #312)
 
version 0.7.1 - 20-Mar-2009
 . Actions: added tags to actions (issue #222)
 . Actions: Spawns can be Speeded (issue #257)