@@ -12,6 +12,7 @@ version 0.7.2 - xxx
  . CocosNode: possible memory leak when running actions (issue #298)
  . CocosNode: dont execute an already running action (issue #299)
  . CocosNode: children referring to deallocated parent (issue #297)
+ . CocosNode: fixed "already scheduled exception" (issue #251)
  . Demos: AtlasSprite with z-order (issue #275)
  . Demos: ParticleDemo uses touches to move the center of the emitter (issue #138)
  . Demos: organized tests folder (issue #280)
